--- a/probability-and-statistics/Source/ex.tex
+++ b/probability-and-statistics/Source/ex.tex
@@ -1,5 +1,5 @@
 \newpage
-\section*{Multiple Choice}
+\section{Multiple Choice}
 Seien $A1$, $A2$, $A3 \in \mathcal{F}$ paarweise unabhängige Ereignisse. Welche Aussage ist korrekt?
 \begin{itemize}
     \item[\checkmark] Die Ereignisse $A1$, $A2$, $A3$ sind nicht zwangsläufig unabhängig.
