--- a/probability-and-statistics/Source/Kapitel9.tex
+++ b/probability-and-statistics/Source/Kapitel9.tex
@@ -1,5 +1,5 @@
 \section{Tabellen}
-\subsection*{Ableitung, Integration}
+\subsection{Ableitung, Integration}
 Es gilt:
 \begin{itemize}
   \item \textbf{Summenregel} $ (f (x) + g (x))' = f' (x) + g' (x)$
@@ -12,7 +12,7 @@ Es gilt:
   \item \textbf{Logarithmus} $\int \frac{f' (t)}{f (t)} \; dt = \log (\abs{f (x)})$
 \end{itemize}
 \BoxStart{}
-\subsection*{Beispiel: Substitution}
+\subsection{Beispiel: Substitution}
 \begin{align*}
   \int \cos (x^2) 2x \; dx &  & u = x^2                              \\
   \int \cos (u) du         &  & \frac{du}{dx} = \frac{dx^2}{dx} = 2x
@@ -99,7 +99,7 @@ Es gilt:
 
 \includegraphics*[width=\columnwidth]{sin-cos-tan}
 
-\section*{Sonstiges}
+\section{Sonstiges}
 \[ax^2 + bx + c = 0 \Rightarrow x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}\]
 \[n! = n \cdot \frac{k=0}{(n - k)!k!}\]
 \[\sum_{k=0}^\infty q^k = \frac{1}{1 - q} \quad \text{for} \quad |q| < 1\]
